v2.7.7   - Clamped values of ITU 709 as it could result in overflows and
	   saturated colors.
	 - Windows64 version of mrViewer was distributed with 16bits
	   ImageMagick instead of 32 bits HDRI.
	 - Added sun raster images to mime types under Linux.
	 - Bug fixed streams' duration to not be always 200 seconds, but
	   the real duration.
	 - Streams duration are shown as frames, seconds and time.
	 - Bug fixed openexr loader with lumma as it was trashing memory
	   and possibly hanging the viewer.

v2.7.6   - Fixed LUT comparison of two images.  Previously, LUT could turn
	   off without any warning when switching images.
	 - Fixed fit image when image was flipped and not stereo.
	 - Fixed creation of thumbnails of movies created with ITU 601 
	   colors.
	 - Fixed color queries of movies created with ITU 601 colors.
	 - Improved accuracy of 3d lookup color evaluation in pixel queries.
	 - Made minor adjustments to color bar interface, moving the Pixel
	   Values widget.

v2.7.5   - Saving out a GradeRef that was turned into LMTs now works
	   properly.  This allows loading and saving an ACES clip file 
	   without corrupting the transforms.
	 - Fixed a bug that would remove the last LMT if you chose
	   cancel on the last empty LMT.
	 - Fixed a memory corruption if LMT's Choose requester was chosen
	   twice.
	 - Fixed the defaults gamma, gain and mask float values in the Spanish
	   locale (changing the dot for a comma).
	 - Bug fixed starting up with LUT active (Set in Preferences). 
	   Previously, it would crash the program.
	 - Bug fixed playback of real media clip that had more than
	   100 frames of audio at the beginning.
	 - Fixed a crash that would happen if you selected FPS Default
	   when no image was loaded.
	 - Fixed locale problems on Windows, where double and float
	   conversions were not handled well.

v2.7.4   - Bug fixed a crashing bug in Windows 32 when displaying the
	   image information window.